# aibrowser

./: LICENSE  README.md  plan.md  pyproject.toml
ai_browser/: __init__.py  actions.py  agent.py  browser.py  cli.py  llm.py  repl.py  state.py  tui.py  types.py
examples/: demo_task.py  sample.html
tests/: test_state_and_actions.py
