[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-browser"
version = "0.1.0"
description = "AI 友好的终端浏览器：基于 Playwright 把网页可访问性树转换为带编号文本，供 LLM/用户通过指令操作浏览器。"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ai-browser" }]
keywords = ["playwright", "accessibility", "llm", "browser", "agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "playwright>=1.40",
    "rich>=13",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
]

[project.scripts]
ai_browser = "ai_browser.cli:main"

[tool.setuptools.packages.find]
include = ["ai_browser"]
